--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Sreerag Rajan</title>
 </head>
 <body>
+    <div class="cursor-blur"></div>
     <div class="cursor"></div>
     <div class="container">
              
