--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
         <div id="skills">
             <div id="heading">
-                <h1>Things I'm good at</h1>
+                <h1>Things I'm <span>good</span> at</h1>
                 <h2>skills, interests, passion and hobbies</h2>
             </div>
             <div id="skill-set">
