--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <h1><em>About me</em></h1>
             </div>
             <div class="about-me">
-                <div class="left"><img src="profile.jpeg" alt="profile-img"></div>
+                <div class="left"><img src="dp.jpeg" alt="profile-img"></div>
                 <div class="right">
                     <p>I'm SreeRag. I'm a <span>Full Stack Web Developer</span>. I have been working as a web developer for quite some time now. I believe I am a very ambitious person who loves to work on making the website work well. Working on the web is my passion as I love to work on exciting projects.</p>
                     
