--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id="nav">
             <h2>SreeRag.</h2>
             <ul>
-                <li><a href="Sreerag_Resume.pdf" target="_blank">Resume</a></li>
+                <li><a href="resume.pdf" target="_blank">Resume</a></li>
             </ul>
         </div>   
              
