--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 <body>
     <div class="container">
 
+        <div class="back">
+            <img src="https://img.freepik.com/premium-photo/white-background-3d-render-waves-shapes-background-texture-clean-white-background-images-jpg_873925-101730.jpg" alt="">
+        </div>
+
         <div id="nav">
             <h2>SreeRag.</h2>
             <ul>
