--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div id="nav">
                 <h2>SreeRag.</h2>
                 <ul>
-                    <li><a href="resume.pdf" target="_blank">Resume</a></li>
+                    <li><a href="full stack resume.pdf" target="_blank">Resume</a></li>
                 </ul>
             </div>   
                  
