--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     
     <div class="loading">
         <h1>SreeRag</h1>
+        <div class="progress">
+            <div class="progressbar"></div>
+        </div>
     </div>
     
     <div id="cursor"></div>
