--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <h1>-About Me-</h1>
 
             <div class="about-me">
-                <div class="left"><img src="IMG_5813.jpeg" alt="profile-img"></div>
+                <div class="left"><img src="me.jpeg" alt="profile-img"></div>
                 <div class="right">
                     <h2>A brief intro, who am I?</h2>
 
