--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </div>
         </div>
 
-        <div data-scroll data-scroll-speed="-2" id="skills">
+        <div id="skills">
             <div id="heading">
                 <h1>-Things I'm <span style="color: black;">good</span> at-</h1>
                 <h2>interests, passion and hobbies</h2>
@@ -117,11 +117,13 @@
                             <img id="gsap" src="images/gsap-min.webp" alt="">
                             <h4>Gsap</h4>
                         </div>
+
                     </div>
                 </div>
             </div>
         </div>
 
+        
         <div id="projects">
             <h1>-Projects-</h1>
             <div class="wrapper">
@@ -158,8 +160,9 @@
                     href="https://www.linkedin.com/in/sreerag-rajan-702ba7249/" target="_blank"
                     style="color:#51CDE7;">linkedIn</a>.
             </h1>
-            <h4>created with 💓 by me</h4 </div>
+            <h4>created with 💓 by me</h4> 
         </div>
+    </div>
 
 
         <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
@@ -171,8 +174,13 @@
             crossorigin="anonymous" referrerpolicy="no-referrer"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.155.0/three.min.js"></script>
             <script src="https://cdn.jsdelivr.net/gh/automat/controlkit.js@master/bin/controlKit.min.js"></script>
-            <script type="text/javascript" src="https://unpkg.com/sheryjs/dist/Shery.js"></script>
+            <script  type="text/javascript"  src="https://unpkg.com/sheryjs/dist/Shery.js"></script>
         <script src="script.js"></script>
 </body>
 
 </html>
+
+
+            <!-- <div class="projects-slider">
+                <h1>Projects</h1>
+            </div> -->
