--- a/index.html
+++ b/index.html
@@ -152,6 +152,18 @@
 
         </div>
 
+         <div id="resume-page">
+            <h1>-Resume-</h1>
+            <div class="resume">
+              <img class="img1" src="resume1.png" alt="" />
+              <img class="img2" src="resume2.png" alt="" />
+              <img class="img3" src="resume3.png" alt="" />
+              <img class="img4" src="resume4.png" alt="" />
+            </div>
+      
+            <a id="download-btn" href="Sreerag_resume.pdf" download>download</a>
+        </div>
+
         <div id="footer">
             <h1>you can get in touch
                 with me via <a href="mailto:sreeragrajan2002@gmail.com" target="_blank" style="color:#FC626A;">mail</a>
