--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
               <img class="img4" src="resume4.png" alt="" />
             </div>
       
-            <a id="download-btn" href="Sreerag_resume.pdf" download>download</a>
+            <a id="download-btn" href="R Sree Rag - Resume.pdf" download>download</a>
         </div>
 
         <div id="footer">
