--- a/index.html
+++ b/index.html
@@ -29,10 +29,7 @@
 
         <div id="home">
             <div id="nav">
-                <h2>SreeRag.</h2>
-                <ul id="resume">
-                    <li><a href="resume.pdf" target="_blank">Resume</a></li>
-                </ul>
+                <h2>PORTFOLIO&copy;2024</h2>
             </div>
 
             <div class="home-content">
